Stop things shifting around when a song is chosen

--- a/karaoke/src/App.css
+++ b/karaoke/src/App.css
@@ -48,7 +48,6 @@ th, td {
 
 .🎤 td {
   background-color:#252;
-  font-size:3.2vw;
   color:#FFF;
 }
 
